# rosetta-stone-project

./: .gitignore  README.md
coffee-tracker/: compose.yml  flyway.conf  podman-compose.yml
coffee-tracker/backend_go/: Dockerfile  go.mod  main.go
coffee-tracker/backend_rust/: .env  Cargo.toml  Dockerfile
coffee-tracker/backend_rust/src/: main.rs
coffee-tracker/backend_spring/: Dockerfile  build.gradle
coffee-tracker/backend_spring/src/main/java/br/com/techthordev/backend_spring/: BackendSpringApplication.java
coffee-tracker/backend_spring/src/main/java/br/com/techthordev/backend_spring/controller/: CoffeeController.java
coffee-tracker/backend_spring/src/main/resources/: application.yml
coffee-tracker/backend_spring/src/test/java/br/com/techthordev/backend_spring/: BackendSpringApplicationTests.java
coffee-tracker/db/migration/: V1__create_coffe_table.sql
coffee-tracker/frontend/: angular.json  package-lock.json  package.json
coffee-tracker/frontend/src/: styles.scss
coffee-tracker/frontend/src/app/: app.html  app.ts
coffee-tracker/frontend/src/app/feature/go-backend/: go-backend.html  go-backend.spec.ts  go-backend.ts
coffee-tracker/frontend/src/app/feature/rust-backend/: rust-backend.html  rust-backend.spec.ts  rust-backend.ts
coffee-tracker/frontend/src/app/feature/spring-backend/: spring-backend.html  spring-backend.spec.ts  spring-backend.ts
coffee-tracker/frontend/src/app/service/: coffee.spec.ts  coffee.ts
coffee-tracker/frontend/src/app/shared/coffee-table/: coffee-table.html  coffee-table.spec.ts  coffee-table.ts
(+2 files in other folders)
